--- a/index.html
+++ b/index.html
@@ -106,28 +106,30 @@
                     <div class="container" id="simple">
                         <div class="simple">
                             <br>
-                            <label id="pos"> Text position: </label>
-                            <ul id="list">
-                                <li class="active" onclick="updatePosition('bottom')">Bottom</li>
-                                <li onclick="updatePosition('top')">Top</li>
-                            </ul>
-                            <select id="position" oninput="updatePosition()">
-                                <option value="bottom">Bottom</option>
-                                <option value="top">Top</option>
-                            </select>
-                            <br>
-                            <br>
-                            <label> Text align: </label>
-                            <ul id="list" class="list">
-                                <li onclick="textAlign('left')"> Left </li>
-                                <li onclick="textAlign('center')" class="active">Center</li>
-                                <li onclick="textAlign('right')">Right</li>
-                            </ul>
-                            <select id="align" oninput="textAlign()">
-                                <option value="center">Center</option>
-                                <option value="left">Left</option>
-                                <option value="right">Right</option>
-                            </select>
+                            <div class="subsim">
+                                <label id="pos"> Text position: </label>
+                                <ul id="list" class="list1">
+                                    <li class="active" onclick="updatePosition('bottom')">Bottom</li>
+                                    <li onclick="updatePosition('top')">Top</li>
+                                </ul>
+                                <select id="position" oninput="updatePosition()" style="display: none;">
+                                    <option value="bottom">Bottom</option>
+                                    <option value="top">Top</option>
+                                </select>
+                                <br>
+                                <br>
+                                <label> Text align: </label>
+                                <ul id="list" class="list2" >
+                                    <li onclick="textAlign('left')"> Left </li>
+                                    <li onclick="textAlign('center')" class="active">Center</li>
+                                    <li onclick="textAlign('right')">Right</li>
+                                </ul>
+                                <select id="align" oninput="textAlign()" style="display: none;">
+                                    <option value="center">Center</option>
+                                    <option value="left">Left</option>
+                                    <option value="right">Right</option>
+                                </select>
+                            </div>
                             <br>
                             <br>
                             <input type="text" id="personalText" placeholder="Enter company name" oninput="generateBarcode()">
