--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             </div>
                             <br>
                             <br>
-                            <input type="text" id="personalText" placeholder="Enter company name" oninput="generateBarcode()">
+                            <input type="text" id="personalText" placeholder="Company / info" oninput="generateBarcode()">
                             <br>
                             <br>
                             <label> Svg size:</label>
@@ -174,6 +174,7 @@
     <br>
     <br>
     <button id="print" type="button" onclick="printSVG()"> <img src="https://cdn-icons-png.flaticon.com/512/159/159287.png" width="45px" alt=""> </button>
+    <button type="button" onclick="download()" style="display: none;"> Download </button>
 
     <div id="myModal" class="modal">
         <div class="modal-content">
@@ -181,6 +182,7 @@
             <p id="modalText"></p>
         </div>
     </div>
+    
 </body>
 <script src="script.js"></script>
 </html>
